# lit

./: .gitignore  CMakeLists.txt  README.md  adjusted-alex.script  main.cpp  test-alex.script  test-run.script
lit-help/: help.cpp
lit-init/: init.cpp  init.hpp
lit-log/: log.cpp  log.hpp
lit-status/: status.cpp  status.hpp
lit-utils/: utils.cpp  utils.hpp  utils2.cpp
